--- a/GwintCodes/src/app/view/gamingTable/gamingTable.css
+++ b/GwintCodes/src/app/view/gamingTable/gamingTable.css
@@ -1,3 +1,5 @@
-.anchorrpane{
-
+.anchorpane{
+-fx-background-image: url("1.jpg");
+-fx-background-repeat: no-repeat;
+-fx-background-size:contain;
 }
